css/style.css
/****** General ***********/
* {
  font-family: "Raleway", sans-serif;
}

:root {
  --main-color: #0065fc;
  --main-bg-color: #f2f2f2;
  --filter-bg-color: #deebff;
}

.fa-solid,
.fa-regular {
  color: var(--main-color);
}

body {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.main-container {
  width: 100%;
  max-width: 1440px;
  padding: 0 50px;
  box-sizing: border-box;
  margin: auto;
}



.section-title {
  margin: 0;
  font-size: 22px;
}

.card {
  background-color: white;
  border-radius: 20px;
  padding: 5px;
  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
  object-fit: cover;
}

.card-title {
  font-size: 16px;
}

.euro {
  font-weight: 700;
}

.neutralStar {
  color: var(--main-bg-color);
}

a:visited {
  color: black;
}

/****** Header ***********/
#header-container {
    display: grid;
    grid-template-columns: repeat (3, 1fr);
    grid-template-rows: 5em 8em;
}

#header-logo {
    height: 25px;
    grid-column-start: 1;
    grid-column-end: 3;
    margin-top: 30px;
}

.header-container img {
  height: 15px;
}

#accommodation-activities a:visited {
    color: inherit;
}

#accommodation-activities a {
    color:#0065fc;
    text-decoration: none;
    margin-left: 30px;
}

#accommodation-activities {
    grid-column-start: 3;
    grid-column-end: 4;
    justify-self: end;
}

#accommodation-activities a:hover {
    border-top: 2px solid #0065fc;
    color: #0065fc;
}

#header-subtitle {
    margin-top: 30px;
}

#header-subtitle p, #header-subtitle h2 {
    margin-top: 0px;
    margin-bottom: 0;
    line-height: 1.6;
}

/****** Search Bar ***********/

#search {
  display: grid;
  grid-template-columns: 50px 195px 93px;
  grid-template-rows: 49px;
  margin-bottom: 30px;
}

#location-pin {
  grid-column-start: 1;
  grid-column-end: 2;
  background-color: #f2f2f2;
  border: 1px solid #f2f2f2;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
  text-align: center;
  height: 47px;
  line-height: 47px;
  width: 50px;
}

.fa-location-dot {
  color: black;
  display: inline-block;
  vertical-align: middle;
}

#search-entry {
  height: 47px;
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  text-align: center;
  background-color: white;
  grid-column-start: 2;
  grid-column-end: 3;
  border-top: 1px solid #f2f2f2;
  border-left: none;
  border-bottom: 1px solid #f2f2f2;
  border-right: none;
  font-family: "Raleway", sans-serif;
  padding: 0;
}

#search-button {
  height: 49px;
  font-family: "Raleway", sans-serif;
  font-size: 18px;
  font-weight: 700;
  color: white;
  background-color: #0065fc;
  grid-column-start: 3;
  grid-column-end: 4;
  border: 1px solid #0065fc;
  border-top-right-radius: 20px;
  border-bottom-right-radius: 20px;
}

/****** Filter ***********/

#filters {
  display: inline-flex;
  margin-bottom: 30px;
  align-items: center;
}

.filter-button {
  display: inline-flex;
  gap: 10px;
  align-items: center;
  height: 48px;
  border: 2px solid #d9d9d9;
  border-radius: 25px;
  background-color: white;
  padding: 4px 19px;
  margin-left: 20px;
}

.filter-button:hover {
  background-color: #deebff;
}

.filter-button-text {
  font-family: "Raleway", sans-serif;
  font-size: 17px;
  font-weight: 700;
}

/****** Info *******/

#info-container {
  display: flex;
  align-items: center;
  margin-bottom: 30px;
}

#info-icon-container {
  display: flex;
  height: 24px;
  width: 24px;
  border: 1px solid #d9d9d9;
  border-radius: 24px;
  align-items: center;
  justify-content: center;
  margin-right: 10px;
}

/****** Accommodation And Popular ***********/
.accommodation-and-popular {
  display: flex;
  justify-content: space-between;
}

.accommodation-and-popular section {
  background-color: var(--main-bg-color);
  border-radius: 20px;
  padding: 30px;
  box-sizing: border-box;
}

/****** Accommodation ***********/
.accommodation {
  width: 65%;
}
.accommodation-title {
  margin-bottom: 30px;
}

.accommodation-cards {
  display: grid;
  grid-template-rows: 210px 210px;
  grid-template-columns: repeat(3, 1fr);
  row-gap: 30px;
  column-gap: 30px;
  justify-content: space-between;
  align-content: space-between;
}

.accommodation-cards .card {
  padding: 0;
  width: 243px;
  height: 207.25px;
  justify-self: center;
  align-self: center;
}

.accommodation-cards .card-content {
  display: flex;
  flex-direction: column;
  padding-left: 15px;
  
}

.accommodation-cards .card-title {
  margin-top: 0;
  margin-bottom: 8px;
}

.accommodation-cards .card-subtitle {
  margin-top: 0;
  margin-bottom: 8px;
}

.accommodation-cards img {
  width: 233px;
  height: 114px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  padding: 5px;
}

#show-more {
  font-weight: 700;
  font-size: 18px;
  text-decoration: none;
}

/****** Popular ***********/
.popular {
  width: 32%;
}

.popular-title {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.popular-cards .card {
  display: flex;
  margin-top: 33px;
}

.popular-cards img {
  width: 33%;
  height: 136px;
  border-top-left-radius: 20px;
  border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
  width: 67%;
  padding-left: 15px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-sizing: border-box;
}

.popular-cards .card-title {
  margin-top: 10px;
  margin-bottom: 4px;
}

.popular-cards .card-subtitle {
  margin: 0;
}

.popular-cards .card-rating {
  margin-bottom: 5px;
}


/****** Things to Do ***********/

.things-to-do {
  display: grid;
  grid-template-rows: auto 1 fr;
  grid-template-columns: repeat(4, 1fr);
  justify-content: space-between;
  padding: 80px;
}

.things-to-do-title {
  grid-column: span 4;
  margin-bottom: 30px;
}

.to-do-card {
  height: 439px;
  width: 298px;
  border-radius: 20px;
  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
}

.to-do-card img {
  height: 380px;
  width: 297.5px;
  border-top-left-radius: 20px;
  border-top-right-radius: 20px;
  object-fit: cover;
}

.to-do-card h3 {
  margin-left: 20px;
}


/****** Footer ***********/
.footer-container {
background-color: var(--main-bg-color);
display: flex;
align-items: flex-start;
margin-left: 50px;
margin-right: 50px;
}

.footer-container h3 {
  margin-bottom: 0;
}

.footer-container section {
  width: 33%;
  text-align: left;
  padding-left: 20px;
}

.footer-list {
  list-style-type: none;
  padding-left: 0;
  margin-top: 0;
}

.footer-list li {
  padding-top: 15px;
}

.footer-list a {
  text-decoration: none;
}

